2015-08-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\balancecolumns): Fix case of short final 
	column which we don't try to break.
	* NEWS: Mention a change to index formatting.

2015-08-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\initialfonts, \initialglyphs): Rename, and 
	add a missing %.
	(\balancecolumns): Make the columns have flush bottoms only if 
	their heights are not too different.
	* doc/texinfo-tex-test.texi: Add example to show flush column 
	bottoms in the middle of an index, and tweak examples of short 
	indices.

2015-08-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/display.c (display_process_line): Don't append codes to 
	line if we are still in the DEFAULT phase.

2015-08-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/info-stnd.texi (Colors and Styles): New chapter.

2015-08-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/display.h, info/variables.h (RENDITION): Move definition.
	* info/display.c (highlight_searches_p, xref_rendition_p): Remove.
	* info/variables.c (set_variable_to_value): Make highlight-searches=On
	equivalent to match-rendition=standout.
	* info/display.c (display_process_line): If hl-ref-rendition 
	hasn't been given, use ref-rendition for active links.

	* info/terminal.c (terminal_end_bold, terminal_end_blink): 
	Remove, repacing them with:
	(terminal_end_all_modes): New function.
	(terminal_switch_rendition): Manage to turn off boldface and 
	blinking without leaving everything else turned off as well.

2015-08-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/terminal.c (terminal_default_colour, terminal_set_colour):
	Add hooks.

2015-08-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/variable.c (set_variable_to_value): Handle rendition
	variables in user init file.
	(info_variables): Add user variables "ref-rendition",
	"hl-ref-rendition", "match-rendition".
	* info/display.h (RENDITION): New type.  Remove superfluous 